--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <title>My weather application</title>
   </head>
   <body>
@@ -21,7 +22,7 @@
             placeholder="Enter a city.."
             required
             class="search-input"
-            id= "search-input"
+            id="search-input"
           />
           <input type="submit" value="Search" class="search-button" />
         </form>
