--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
       <footer>
         <p>
           This project was coded by
-          <a href="https://www.linkedin.com/in/carie-ng/" target="_blank"
-            >Carie Ng</a
+          <a href="https://github.com/LilithVinter" target="_blank">Carie Ng</a>
+          and is
+          <a
+            href="https://github.com/LilithVinter/Learning-Coding"
+            target="_blank"
+            >on GitHub</a
+          >
+          and
+          <a href="https://carie-learning-to-code.netlify.app" target="_blank"
+            >hosted on Netify</a
           >
         </p>
       </footer>
