--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
-    <title>My weather application</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="weather-app">
       <header>
+        <img class="logo" src="image/logo.svg" />
         <form id="search-form">
           <input
             type="search"
@@ -24,7 +25,7 @@
             class="search-input"
             id="search-input"
           />
-          <input type="submit" value="Search" class="search-button" />
+          <input type="submit" value="Search 🔎" class="search-button" />
         </form>
       </header>
       <main>
@@ -43,6 +44,7 @@
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
+        <div class="forecast"></div>
       </main>
       <footer>
         <p>
