--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
-        <div class="forecast"></div>
+        <div class="forecast">Forecast coming soon...</div>
       </main>
       <footer>
         <p>
