--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class="current-weather">
           <div>
-            <h1 class="current-city" id="city">Paris</h1>
+            <h1 class="current-city" id="city"> Copenhagen</h1>
             <p class="current-details">
               <span id="current-date"></span>
               ,moderate rain <br />
@@ -39,9 +39,9 @@
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value">24</span
-            ><span class="current-temperature-unit">°C</span>
+            <span id="current-temperature-icon">☀️</span
+            ><span id="current-temperature-value">20</span
+            ><span id="current-temperature-unit">°C</span>
           </div>
         </div>
         <div class="forecast">Forecast coming soon...</div>
