wip week forecast (html/css)

--- a/index.html
+++ b/index.html
@@ -50,10 +50,23 @@
           <div class="current-temperature">
             <div id="current-temperature-icon"></div>
             <span id="current-temperature-value"> </span
-            ><span id="current-temperature-unit">°C </span>
+            ><span id="current-temperature-unit"> </span>
           </div>
         </div>
-        <div class="forecast">Forecast coming soon...</div>
+        <h2 class="forecast">🔮Week ahead</h2>
+        <div class="row">
+          <div class="col-2">
+            <div class="weather-forecast-date">Thu</div>
+            <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+              alt="weather forecast icon"
+            />
+            <div class="weather-forecast-temp">
+              <span id="max-temp">18°</span>
+              <span id="min-temp"> 12°</span>
+            </div>
+          </div>
+        </div>
       </main>
       <footer>
         <p>
