--- a/index.html
+++ b/index.html
@@ -53,20 +53,9 @@
             ><span id="current-temperature-unit"> </span>
           </div>
         </div>
-        <h2 class="forecast">🔮Week ahead</h2>
-        <div class="row">
-          <div class="col-2">
-            <div class="weather-forecast-date">Thu</div>
-            <img
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
-              alt="weather forecast icon"
-            />
-            <div class="weather-forecast-temp">
-              <span id="max-temp">18°</span>
-              <span id="min-temp"> 12°</span>
-            </div>
-          </div>
-        </div>
+        <h2 class="weatherForecast">🔮Week ahead</h2>
+        <div id="forecast"></div>
+        
       </main>
       <footer>
         <p>
