--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         </div>
         <div class="current-weather">
           <div>
+            <p id="current-date"></p>
             <h1 class="current-city" id="city">Find Your City's Weather</h1>
             <p class="current-details">
-              <span id="current-date"> </span>
-              <span id="status"> </span> <br />
               <strong id="humidity"> </strong>
               <strong id="wind-speed"> </strong>
+              <br />
+              <span id="status"> </span> 
             </p>
           </div>
           <div class="current-temperature">
