added styles to clock/timezone setup (css)

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </main>
       <main class="clockApp">
         <div class="clocks">
-          <h2 class="clockAppHeader">Check Local Times</h2>
+          <h2 class="clockAppHeader">⌛Check Local Times</h2>
           <p id="current-date"></p>
           <select>
             <option value="">Select a city...</option>
@@ -70,17 +70,20 @@
           </select>
 
           <div class="cities">
-            <h3> London  </h3>
-            <div class=""date"> 24 May 2024 </div>
-            <div class="time"> 05:46:00 </div>
+            <h3>London</h3>
+            <div class="dateTime">
+              <div class="date">24 May 2024</div>
+              <div class="time">05:46:00</div>
+            </div>
           </div>
 
           <div class="cities">
-            <h3> Copenhagen </h3>
-            <div class=""date"> 24 May 2024 </div>
-            <div class="time"> 05:46:00 </div>
+            <h3>Copenhagen</h3>
+            <div class="dateTime">
+              <div class="date">24 May 2024</div>
+              <div class="time">05:46:00</div>
+            </div>
           </div>
-
         </div>
       </main>
       <footer>
