added 24-hour and 12-hour format

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
               checked
               value="24"
             />
-            <label for="24hr"> 24 Hour Time</label>
+            <label for="24hr"> 24-hour Time</label>
 
             <input type="radio" name="displayTime" id="12hr" value="12" />
-            <label for="12hr"> 12 Hour Time</label>
+            <label for="12hr"> 12-hour Time</label>
           </div>
 
           <div class="cities" id="london">
